# hass-st-patrick-residence

./: .pre-commit-config.yaml  README.md  hacs.json  pyproject.toml
custom_components/: __init__.py
custom_components/stpatrick_residence/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
tests/: __init__.py  conftest.py  test_api.py  test_sensor.py
